infer/tests/codetoanalyze/objc/errors/field_superclass/SuperExample.dot
digraph iCFG {
16 [label="16:  DeclStmt \n   n$1=_fun___objc_alloc_no_fail(sizeof(class A ):unsigned long ) [line 42]\n  n$2=_fun_NSObject_init(n$1:class A *) virtual [line 42]\n  *&a:struct objc_object *=n$2 [line 42]\n  REMOVE_TEMPS(n$1,n$2); [line 42]\n  NULLIFY(&a,false); [line 42]\n " shape="box"]
	

	 16 -> 15 ;
15 [label="15:  Release the autorelease pool \n   n$0=_fun___objc_release_autorelease_pool() [line 41]\n  REMOVE_TEMPS(n$0); [line 41]\n  APPLY_ABSTRACTION; [line 41]\n " shape="box"]
	

	 15 -> 14 ;
14 [label="14: Exit main \n  " color=yellow style=filled]
	

13 [label="13: Start main\nFormals:  argc:int  argv:char **\nLocals:  a:struct objc_object * \n   DECLARE_LOCALS(&return,&a); [line 40]\n  NULLIFY(&a,false); [line 40]\n  NULLIFY(&argc,false); [line 40]\n  NULLIFY(&argv,false); [line 40]\n " color=yellow style=filled]
	

	 13 -> 16 ;
12 [label="12:  BinaryOperatorStmt: Assign \n   n$2=*&self:class A * [line 33]\n  n$3=_fun_B_init(n$2:class A *) [line 33]\n  *&self:class A *=n$3 [line 33]\n  REMOVE_TEMPS(n$2,n$3); [line 33]\n " shape="box"]
	

	 12 -> 11 ;
11 [label="11:  BinaryOperatorStmt: Assign \n   n$1=*&self:class A * [line 34]\n  *n$1.a:int =4 [line 34]\n  REMOVE_TEMPS(n$1); [line 34]\n " shape="box"]
	

	 11 -> 10 ;
10 [label="10:  Return Stmt \n   n$0=*&self:class A * [line 35]\n  *&return:struct objc_object *=n$0 [line 35]\n  REMOVE_TEMPS(n$0); [line 35]\n  NULLIFY(&self,false); [line 35]\n  APPLY_ABSTRACTION; [line 35]\n " shape="box"]
	

	 10 -> 9 ;
9 [label="9: Exit A_init \n  " color=yellow style=filled]
	

8 [label="8: Start A_init\nFormals:  self:class A *\nLocals:  \n   DECLARE_LOCALS(&return); [line 32]\n " color=yellow style=filled]
	

	 8 -> 12 ;
7 [label="7: Exit A_frontendChecks \n  " color=yellow style=filled]
	

6 [label="6: Start A_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 6 -> 7 ;
5 [label="5:  Return Stmt \n   *&return:struct objc_object *=0 [line 19]\n  APPLY_ABSTRACTION; [line 19]\n " shape="box"]
	

	 5 -> 4 ;
4 [label="4: Exit B_init \n  " color=yellow style=filled]
	

3 [label="3: Start B_init\nFormals:  self:class B *\nLocals:  \n   DECLARE_LOCALS(&return); [line 18]\n  NULLIFY(&self,false); [line 18]\n " color=yellow style=filled]
	

	 3 -> 5 ;
2 [label="2: Exit B_frontendChecks \n  " color=yellow style=filled]
	

1 [label="1: Start B_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 1 -> 2 ;
}
